# audiobook-chapterizer

./: .editorconfig  .gitignore  Cargo.toml  build.rs  chapterize.sh  justfile
src/: audio_provider.rs  chapter_writer.rs  cue.rs  ffmetadata.rs  fixed_vec_deque.rs  lib.rs  main.rs
src/chapterize/: mod.rs  results_parser.rs  token.rs
src/extract/: ffprobe.rs  mod.rs
