[package]
name = "audiobook-chapterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
itertools = "0.10.5"
symphonia = { version = "0.5.1", features = ["mp3", "isomp4", "aac", "alac"] }
vosk = "0.2.0"
