[package]
name = "audiobook-chapterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
clap = { version = "4.0.22", features = ["derive"] }
color-eyre = "0.6.2"
crossbeam = "0.8.2"
env_logger = "0.9.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
ordered-float = "3.4.0"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
symphonia = { version = "0.5.1", features = ["mp3", "isomp4", "aac", "alac"] }
text2num = "2.1.0"
unindent = "0.1.10"
vosk = "0.2.0"
